Replace legacy dependencies and refactor controllers; introduce LocalizationCatalog interface to enhance i18n functionality.